Switch parser, remove submodules, refactoring
Also make more Windows compatible, etc.